<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/search"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/input"
        android:contentDescription="@string/content_description_in"
        android:title="@string/in"
        app:showAsAction="never" />

    <item
        android:id="@+id/output"
        android:contentDescription="@string/content_description_out"
        android:title="@string/out"
        app:showAsAction="never" />

    <item
        android:id="@+id/clear_all"
        android:contentDescription="@string/content_description_clear_all"
        android:title="@string/clear_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_legacy"
        android:contentDescription="@string/content_description_import_legacy"
        android:title="@string/import_legacy"
        app:showAsAction="never" />

</menu>